// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render a list of clickable items 1`] = `
<ul
  className="orizzonte__list"
  style={
    Object {
      "minWidth": null,
    }
  }
>
  <li
    className="orizzonte__item"
    key="0/.$Filter1"
  >
    <a
      className="orizzonte__item-clickable"
      href="#"
      key="Filter1"
      onClick={[MockFunction]}
    >
      Filter 1
    </a>
  </li>
  <li
    className="orizzonte__item"
    key="1/.$Filter2"
  >
    <a
      className="orizzonte__item-clickable"
      href="#"
      key="Filter2"
      onClick={[MockFunction]}
    >
      Filter 2
    </a>
  </li>
</ul>
`;

exports[`<List /> should render a list of filters 1`] = `
<ul
  className="orizzonte__list"
  style={
    Object {
      "minWidth": null,
    }
  }
>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="0/.0"
  >
    <OrizzonteSelect
      disabled={false}
      fieldName="myAPIField"
      information={null}
      label="Test select"
      notSetLabel="None"
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="1/.1"
  >
    <OrizzonteChoices
      fieldName="myAPIField"
      information={null}
      label="Test multiple choices"
      multiple={true}
      noPreferenceLabel={null}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__list-controls"
  >
    <button
      className="orizzonte__list-control orizzonte__list-done"
      onClick={[MockFunction]}
      type="button"
    >
      Done
    </button>
  </li>
</ul>
`;

exports[`<List /> should render a list of filters with remove button, custom done button and custom orientation 1`] = `
<ul
  className="orizzonte__list orizzonte__list--right"
  style={
    Object {
      "minWidth": null,
    }
  }
>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="0/.0"
  >
    <OrizzonteSelect
      disabled={false}
      information={null}
      label="Test select"
      notSetLabel={false}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="1/.1"
  >
    <OrizzonteChoices
      fieldName="myAPIField"
      information={null}
      label="Test multiple choices"
      multiple={true}
      noPreferenceLabel={null}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__list-controls"
  >
    <button
      className="orizzonte__list-control orizzonte__list-remove"
      onClick={[MockFunction]}
      type="button"
    >
      Remove group
    </button>
    <button
      className="orizzonte__list-control orizzonte__list-done"
      onClick={[Function]}
      type="button"
    >
      Apply
    </button>
  </li>
</ul>
`;

exports[`<List /> should render a list of filters without done button 1`] = `
<ul
  className="orizzonte__list"
  style={
    Object {
      "minWidth": null,
    }
  }
>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="0/.0"
  >
    <OrizzonteSelect
      disabled={false}
      information={null}
      label="Test select"
      notSetLabel={false}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
  <li
    className="orizzonte__item orizzonte__item--filters"
    key="1/.1"
  >
    <OrizzonteChoices
      fieldName="myAPIField"
      information={null}
      label="Test multiple choices"
      multiple={true}
      noPreferenceLabel={null}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
</ul>
`;
